--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<link rel="icon" href="/favicon.ico" >
 <div class="page clearfix" index>
     <div class="left">
         <h1>远志班 </h1>
