--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+<style>
+	body
+	{
+	    background-image:url("http://www.dztlxx.com/static/upload/image/20191126/1574756825.jpg")
+	}
+	</style>
 <link rel="icon" href="/favicon.ico" >
 <div class="page clearfix" index>
     <div class="left">
