--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <style>
 	body
 	{
-	background-image:url("http://www.dztlxx.com/static/upload/image/20191126/1574756825.jpg")
+	background-image:url("/background.jpg")
 	}
 </style>
 <div class="page clearfix" index>
