--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <style>
 	body
 	{
-	background-image:url("/background.jpg")
+	background-image:url("/background.jpg")auto
 	}
 </style>
 <div class="page clearfix" index>
