--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@ layout: default
 <style>
 	body
 	{
-	background-image:url("/background.jpg")auto
+	height=auto
+	width=auto
+	background-image:url("/background.jpg")
 	}
 </style>
 <div class="page clearfix" index>
