--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
 <style>
 	body
 	{
-	height=auto
-	width=auto
+	height:auto
+	width:auto
 	background-image:url("/background.jpg")
 	}
 </style>
