Update and rename 2020-05-03-Tests_News.md to 2020-05-03-Tests_News.html

--- a/_posts/2020-05-03-Tests_News.html
+++ b/_posts/2020-05-03-Tests_News.html
@@ -21,7 +21,8 @@ author: Asdonel
 所以取名为 “新闻测试”。
 
 ## 新闻
-&lt;embed src=&quot;http://player.youku.com/player.php/sid/XMzI2NTc4NTMy/v.swf&quot; 
-width=&quot;480&quot; height=&quot;400&quot; 
-type=&quot;application/x-shockwave-flash&quot;&gt;
-&lt;/embed&gt;
+<embed src="http://player.youku.com/player.php/sid/XMzI2NTc4NTMy/v.swf" 
+width="480" height="400" 
+type="application/x-shockwave-flash">
+</embed>
+
