--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@ layout: default
 	background-image:url("/background.jpg")
 	}
 </style>
+<embed src="http://player.youku.com/player.php/sid/XMzI2NTc4NTMy/v.swf"
+       width="480" height="400"
+       type="application/x-shockwave-flash">
+</embed>
 <div class="page clearfix" index>
     <div class="left">
         <h1>远志班 </h1>
