--- a/index.html
+++ b/index.html
@@ -2,20 +2,10 @@
 layout: default
 ---
 <link rel="icon" href="/favicon.ico" >
-<style>
-	body
-	{
-	background-image:url("/background.jpg")
-	}
-</style>
-<embed src="http://player.youku.com/player.php/sid/XMzI2NTc4NTMy/v.swf"
-       width="480" height="400"
-       type="application/x-shockwave-flash">
-</embed>
 <div class="page clearfix" index>
     <div class="left">
         <h1>远志班 </h1>
-        <small>达州市天立学校初一一班</small>
+        <small>之后再想名字…………</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
