--- a/data/News_data.html
+++ b/data/News_data.html
@@ -34,7 +34,7 @@ var effect = null;	//特效方法全局变量
 var t = null;
 window.onload = function(){
 	video = document.getElementById("video");
-	video.src = "demo1.mp4";
+	video.src = "https://www.bilibili.com/video/BV19Q4y1d7vA";
 	video.load();
 
 	var play = document.getElementById("play");
