--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 <link rel="icon" href="/favicon.ico" >
+<style>
+	body
+	{
+	background-image:url("/background.jpeg")
+	}
+	</style>
 <div class="page clearfix" index>
     <div class="left">
         <h1>远志班 </h1>
