--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 	</style>
 <div class="page clearfix" index>
     <div class="left">
-        <h1>远志班 </h1>
+        <h1>二硫化氢 </h1>
         <small>之后再想名字…………</small>
         <hr>
         <ul>
